Show only items that are added in store & warehouse stocks report

--- a/ZenBiz/AppModules/RDLC/stocks-per-store.rdlc
+++ b/ZenBiz/AppModules/RDLC/stocks-per-store.rdlc
@@ -972,6 +972,8 @@
                 </TablixMember>
               </TablixMembers>
             </TablixRowHierarchy>
+            <RepeatColumnHeaders>true</RepeatColumnHeaders>
+            <KeepTogether>true</KeepTogether>
             <DataSetName>StocksPerStore</DataSetName>
             <Top>0.34078cm</Top>
             <Height>1.90583cm</Height>
