Hidden Outstanding Balance Column in Accounts Receivable Aging Report.

--- a/ZenBiz/AppModules/RDLC/aging-accounts-receivables.rdlc
+++ b/ZenBiz/AppModules/RDLC/aging-accounts-receivables.rdlc
@@ -1060,7 +1060,11 @@
               <TablixMembers>
                 <TablixMember />
                 <TablixMember />
-                <TablixMember />
+                <TablixMember>
+                  <Visibility>
+                    <Hidden>true</Hidden>
+                  </Visibility>
+                </TablixMember>
                 <TablixMember />
                 <TablixMember />
                 <TablixMember />
